--- a/Kalkulus 2/Kalkulus_2.html
+++ b/Kalkulus 2/Kalkulus_2.html
@@ -65,8 +65,8 @@
         </a>
         <ol class="sub-menu">
         <div>
-          <li><a href="Bab 1/1Fungsi Eksponensial dan Logaritma.html">Fungsi Eksponensial dan Logaritma</a></li>
-          <li><a href="Bab 1/FUngsi Invers dan Trigonometri.html">Fungsi Invers Trigonometri</a></li>
+          <li><a href="Bab 1/1F Eksponen dan Log.html">Fungsi Eksponensial dan Logaritma</a></li>
+          <li><a href="Bab 1/2F Invers n Trigono.html">Fungsi Invers Trigonometri</a></li>
           <li><a href="Bab 1/Fungsi Hiperbola.html">Fungsi Hiperbola</a></li>
         </div>
         </ol>
