--- a/index.html
+++ b/index.html
@@ -257,11 +257,13 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                           <a href="https://www.its.ac.id/pendidikan/skpb/tes-tpa-tefl-maba/" title="Tes TPA &amp; TEFL MABA">
                           Tes TPA &amp; TEFL MABA
                           </a></li><li>
-                            <a href="Web.html" title="Web Pembelajaran Kalkulus">Pembelajaran Kalkulus</a>
+                            <a href="mainWeb/Web.html" title="Web Pembelajaran Kalkulus">Pembelajaran Kalkulus</a>
                           </li></li><li>
                           <a href="https://www.its.ac.id/pendidikan/skpb/kontak-skpb/" title="Kontak SKPB">
                           Kontak SKPB
-                          </a></li></ul><div class="vc_empty_space"   style="height: 32px" ><span class="vc_empty_space_inner"></span></div>
+                          </a></li>
+                        </ul>
+                        <div class="vc_empty_space"   style="height: 32px" ><span class="vc_empty_space_inner"></span></div>
 <div class="box-help ">
                     <h3 class="title"></h3><p><div class="btn-help">
                         <a href="">
@@ -279,7 +281,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p style="text-align: justify">Subdirektorat Koordinasi Perkuliahan Bersama atau SKPB merupakan unit dibawah Direktorat Pendidikan yang bertugas untuk mengkoordinasi perkuliahan mata kuliah bersama seluruh mahasiswa di ITS baik Mahasiswa Baru ataupun Mahasiswa Semester Atas.</p>
+			<p style="text-align: justify">Subdirektorat Koordinasi Perkuliahan Bersama atau SKPB merupakan unit dibawah Direktorat Pendidikan yang bertugas untuk mengkoordinasi perkuliahan mata kuliah bersama seluruh mahasiswa di ITS baik Mahasiswa Baru ataupun Mahasiswa Semester Atas.</p> 
 <p>Mata Kuliah Bersama yang dikelola oleh SKPB terbagi dalam 3 kelompok :</p>
 <ul>
 <li>Basic Science :
