--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -149,7 +149,7 @@
       <h2 style="display: flex; justify-content: center; font-family:Arial;">1.1 Fungsi Eksponensial dan Logaritma</h2> <br>
 
     <div id="home">
-      <h2>#Rangkuman Materi</h2> <br>
+      <h2 style="display: flex; justify-content: left;">A. Rangkuman Materi</h2> <br>
         <p style="font-size: 118%;"><b>1.1 Bilangan Berpangkat</b> </p>
     <div class="dfn-box definisi">
       <div class="dfn-header">
@@ -529,7 +529,7 @@
 <br>
 <hr><br>
 <div id="homeContoh">
-<h1>Contoh Soal 1.1</h1> <br><hr><br>
+<h2>B. Contoh Soal 1.1</h2> <br><hr><br>
 
 1. <b>Soal Kuis</b><br>
 Dapatkan nilai \(x\) dari: \(ln(x+6) + ln(x-3) = ln5+ln2\)
@@ -575,7 +575,7 @@ Misalkan \(u=lnx\), sehingga \(du = \frac{dx}{x}\)
 <br>
 <hr><br>
 <div id="homeSoal">
-<h1 style="display: flex; justify-content: center;">Latihan Soal 1.1</h1><br>
+<h2 style="display: flex; justify-content: center;">C. Latihan Soal 1.1</h2><br>
 <div class="content">
   <div class="home">
 1. <b>Soal ETS 2020</b>
