--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -428,7 +428,7 @@
 <h5>: Tabel Sifat Fungsi Eksponen dan Logaritma</h5>
 
 <table>
-  <tr style="background-color: rgb(175, 175, 175); ;">
+  <tr style="background-color: rgb(175, 175, 175);">
     <th>Sifat \( e^x \)</th>
     <th>Sifat \( \ln x \)</th>
   </tr>
