--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -182,7 +182,7 @@
         <p style="font-size: 118%;"><b>1.2 Fungsi Eksponensial</b> </p>
         <div style="text-align: center;">
 <img src="../gambar/gambar_1.1.svg" alt="Grafik Eksponensial" style="width: 15cm; text-align: center;">
-<p style="text-align: ;"><b>Gambar 1.2.1</b> Grafik Eksponensial</p>
+<p"><b>Gambar 1.2.1</b> Grafik Eksponensial</p>
         </div>
             <p style="font-size: 118%;"><b>1.3 Fungsi Eksponensial Natural </b> </p>
     <ol class="materi1">
@@ -329,10 +329,10 @@
 
 <div style="text-align: center;">
 <img src="../gambar/gambar_1.2.svg" alt="Grafik Eksponensial" style="width:15cm; text-align: center; ">
-<p style="text-align: ;"><b>Gambar 1.2.2</b> Grafik Logaritmik</p>
+<p"><b>Gambar 1.2.2</b> Grafik Logaritmik</p>
 
   <img src="../gambar/gambar_1.3.svg" alt="Grafik Eksponensial" style="width: 15cm; ">
-<p style="text-align: ;"><b>Gambar 1.2.3</b> Grafik Logaritmik</p>
+<p><b>Gambar 1.2.3</b> Grafik Logaritmik</p>
 
 </div>
 
