--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -36,6 +36,8 @@
         background-position: center;
         z-index: -1;
       }
+
+      
     </style>
     
 </head>
@@ -166,7 +168,7 @@
           <li>\( (a^m)^n = a^{mn} \)</li>
           <li>\( a^0 = 1 \)</li>
           <li>\( a^{-n} = \frac{1}{a^n} \)</li>
-        </ol>
+        </ol> <br>
 <div class="dfn-box definisi">
   <div class="dfn-header">
     Definisi 1.1.2</div>
@@ -181,7 +183,7 @@
 </div>
         <p style="font-size: 118%;"><b>1.2 Fungsi Eksponensial</b> </p>
         <div style="text-align: center;">
-<img src="../gambar/gambar_1.1.svg" alt="Grafik Eksponensial" style="width: 15cm; text-align: center;">
+<img src="../gambar/gambar_1.1.svg" alt="Grafik Eksponensial" style="width: 15cm; text-align: center;"><br>
 <p"><b>Gambar 1.2.1</b> Grafik Eksponensial</p>
         </div>
             <p style="font-size: 118%;"><b>1.3 Fungsi Eksponensial Natural </b> </p>
@@ -265,7 +267,7 @@
             </div>
           </div>
 
-<p style="font-size: 118%;"><b>1.6  Grafik dari Fungsi Logaritma dan Eksponensial  </b> </p>        
+<p style="font-size: 120%;"><b><u>1.6  Grafik dari Fungsi Logaritma dan Eksponensial </u></b> </p>        
           <div class="dfn-box teorema">
             <div class="dfn-header"> 
               Teorema 1.6.1
@@ -328,10 +330,10 @@
           </div>
 
 <div style="text-align: center;">
-<img src="../gambar/gambar_1.2.svg" alt="Grafik Eksponensial" style="width:15cm; text-align: center; ">
+<img src="../gambar/gambar_1.2.svg" alt="Grafik Eksponensial" style="width:15cm; text-align: center; "> <br>
 <p"><b>Gambar 1.2.2</b> Grafik Logaritmik</p>
 
-  <img src="../gambar/gambar_1.3.svg" alt="Grafik Eksponensial" style="width: 15cm; ">
+  <img src="../gambar/gambar_1.3.svg" alt="Grafik Eksponensial" style="width: 15cm; "> <br>
 <p><b>Gambar 1.2.3</b> Grafik Logaritmik</p>
 
 </div>
