--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -183,7 +183,7 @@
 </div>
         <p style="font-size: 118%;"><b>1.2 Fungsi Eksponensial</b> </p>
         <div style="text-align: center;">
-<img src="../gambar/gambar_1.1.svg" alt="Grafik Eksponensial" style="width: 15cm; text-align: center;"><br>
+<img src="../gambar/gambar_1.1.svg" alt="Grafik Eksponensial" style="width: 45%;"><br>
 <p"><b>Gambar 1.2.1</b> Grafik Eksponensial</p>
         </div>
             <p style="font-size: 118%;"><b>1.3 Fungsi Eksponensial Natural </b> </p>
@@ -330,10 +330,10 @@
           </div>
 
 <div style="text-align: center;">
-<img src="../gambar/gambar_1.2.svg" alt="Grafik Eksponensial" style="width:15cm; text-align: center; "> <br>
+<img src="../gambar/gambar_1.2.svg" alt="Grafik Eksponensial" style="width:45%; "> <br>
 <p"><b>Gambar 1.2.2</b> Grafik Logaritmik</p>
 
-  <img src="../gambar/gambar_1.3.svg" alt="Grafik Eksponensial" style="width: 15cm; "> <br>
+  <img src="../gambar/gambar_1.3.svg" alt="Grafik Eksponensial" style="width: 45%; "> <br>
 <p><b>Gambar 1.2.3</b> Grafik Logaritmik</p>
 
 </div>
@@ -430,7 +430,7 @@
 <h5>: Tabel Sifat Fungsi Eksponen dan Logaritma</h5>
 
 <table>
-  <tr style="background-color: rgb(175, 175, 175);">
+  <tr style="background-color: rgb(175, 175, 175); tex">
     <th>Sifat \( e^x \)</th>
     <th>Sifat \( \ln x \)</th>
   </tr>
