--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -147,11 +147,11 @@
     </nav>
 
    <main class="content">
-      <h1 style="display: flex; justify-content: center; font-family:Verdana;"> <u>BAB 1 : FUNGSI TRANSENDEN</u></h1><br>
-      <h2 style="display: flex; justify-content: center; font-family:Arial;">1.1 Fungsi Eksponensial dan Logaritma</h2> <br>
+      <h1 style="display: flex; justify-content: left; font-family:Verdana;"> <u>BAB 1 : FUNGSI TRANSENDEN</u></h1><br>
+      <h2 style="display: flex; justify-content: left; font-family:Arial;">1.1 Fungsi Eksponensial dan Logaritma</h2> <br>
 
     <div id="home">
-      <h2 style="display: flex; justify-content: left;">A. Rangkuman Materi</h2> <br>
+      <h2 style="display: flex; justify-content: center;">A) Rangkuman Materi 1.1</h2> <br>
         <p style="font-size: 118%;"><b>1.1 Bilangan Berpangkat</b> </p>
     <div class="dfn-box definisi">
       <div class="dfn-header">
@@ -462,7 +462,7 @@
 <br>
 <hr><br>
 <div id="homeContoh">
-<h2>B. Contoh Soal 1.1</h2> <br><hr><br>
+<h2 style="text-align: center;">B) Contoh Soal 1.1</h2> <br><hr><br>
 
 1. <b>Soal Kuis</b><br>
 Dapatkan nilai \(x\) dari: \(\ln (x+6) + \ln (x-3) = \ln 5 +\ln2\)
@@ -508,7 +508,7 @@ Misalkan \(u=\ln x\), sehingga \(du = \frac{dx}{x}\)
 <br>
 <hr><br>
 <div id="homeSoal">
-<h2 style="display: flex; justify-content: center;">C. Latihan Soal 1.1</h2><br>
+<h2 style="display: flex; justify-content: center;">C) Latihan Soal</h2><br>
 <div class="content">
   <div class="home">
 1. <b>Soal ETS 2020</b>
