--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -151,7 +151,7 @@
       <h2 style="display: flex; justify-content: left; font-family:Arial;">1.1 Fungsi Eksponensial dan Logaritma</h2> <br>
 
     <div id="home">
-      <h2 style="display: flex; justify-content: center;">A) Rangkuman Materi 1.1</h2> <br>
+      <h2 style="display: flex; justify-content: center;">A) Rangkuman Materi</h2> <br>
         <p style="font-size: 118%;"><b>1.1 Bilangan Berpangkat</b> </p>
     <div class="dfn-box definisi">
       <div class="dfn-header">
@@ -183,7 +183,7 @@
 </div>
         <p style="font-size: 118%;"><b>1.2 Fungsi Eksponensial</b> </p>
         <div style="text-align: center;">
-<img src="../gambar/gambar_1.1.svg" alt="Grafik Eksponensial" style="width: 45%;"><br>
+<img src="../gambar/gambar_1.1.1.svg" alt="Grafik Eksponensial" style="width: 45%;"><br>
 <p"><b>Gambar 1.2.1</b> Grafik Eksponensial</p>
         </div>
             <p style="font-size: 118%;"><b>1.3 Fungsi Eksponensial Natural </b> </p>
@@ -330,10 +330,10 @@
           </div>
 
 <div style="text-align: center;">
-<img src="../gambar/gambar_1.2.svg" alt="Grafik Eksponensial" style="width:45%; "> <br>
+<img src="../gambar/gambar_1.1.2.svg" alt="Grafik Eksponensial" style="width:45%; "> <br>
 <p"><b>Gambar 1.2.2</b> Grafik Logaritmik</p>
 
-  <img src="../gambar/gambar_1.3.svg" alt="Grafik Eksponensial" style="width: 45%; "> <br>
+  <img src="../gambar/gambar_1.1.3.svg" alt="Grafik Eksponensial" style="width: 45%; "> <br>
 <p><b>Gambar 1.2.3</b> Grafik Logaritmik</p>
 
 </div>
@@ -459,15 +459,13 @@
 </div>
 
 
-<br>
-<hr><br>
 <div id="homeContoh">
-<h2 style="text-align: center;">B) Contoh Soal 1.1</h2> <br><hr><br>
+<h2 style="text-align: center;">B) Contoh Soal</h2> <br><hr><br>
 
 1. <b>Soal Kuis</b><br>
 Dapatkan nilai \(x\) dari: \(\ln (x+6) + \ln (x-3) = \ln 5 +\ln2\)
 <br>
-<h4>Pembahasan</h4>
+<h4>Jawab:</h4>
         <div class="solution-step">
           ingat bahwa \(\ln (ab) = \ln a + \ln b\), maka
           <p style="display: flex; justify-content:center;">\(\ln (x+6) +\ln (x-3) = \ln 5 + \ln2\)</p>
@@ -479,7 +477,7 @@ Dapatkan nilai \(x\) dari: \(\ln (x+6) + \ln (x-3) = \ln 5 +\ln2\)
 <hr>
 2. <b>Soal ETS 2020</b><br>
 Dapatkan turunan dari  \(y=(1+x)^{\frac{1}{x}}\) 
-<h4>Pembahasan</h4>
+<h4>Jawab:</h4>
 <div class="solution-step">
   <p style="display: flex;justify-content: center;">\(y=(1+x)^{\frac{1}{x}}\)</p>
   <p style="display: flex;justify-content: center;">\(\ln y =\ln(1+x)^{\frac{1}{x}}\)</p>
@@ -491,7 +489,7 @@ Dapatkan turunan dari  \(y=(1+x)^{\frac{1}{x}}\)
   <p style="display: flex;justify-content: center;">\(\frac{dy}{dx}=(-\frac{-(1+x) \ln (1+x)+x}{x^2})(1+x)^{\frac{1-x}{x}}\)</p>
 </div><hr>
 3. Hitung \(\int \frac{dx}{x \ln x}\) <br>
-<b>Pembahasan:</b><br>
+<b>Jawab::</b><br>
 Misalkan \(u=\ln x\), sehingga \(du = \frac{dx}{x}\)
 <p style="display: flex;justify-content: center; font-size:x-larger;">\(\int \frac{dx}{x\ln x}=\int \frac{du}{u}\)</p>
 <p style="display: flex; justify-content: center;">=\(\ln x\) + C</p>
@@ -504,9 +502,6 @@ Misalkan \(u=\ln x\), sehingga \(du = \frac{dx}{x}\)
     </div>
     </div>
   
-
-<br>
-<hr><br>
 <div id="homeSoal">
 <h2 style="display: flex; justify-content: center;">C) Latihan Soal</h2><br>
 <div class="content">
