--- a/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
+++ b/Kalkulus 2/Bab 1/1F Eksponen dan Log.html
@@ -241,7 +241,7 @@
             <ol class="materi1">
                 <li>\(\ln(bc) = \ln(b) + \ln(c)\)</li>
                 <li>\(\ln (\frac{b}{c}) = \ln(b) - \ln(c)\)</li>
-                <li>\(\ln(b)^r\)</li>
+                <li>\(\ln(b)^r = r \ln(b)\)</li>
                 <li>\(\ln (\frac{1}{c}) = -\ln(c) \)</li>
                 </ol>
           </div>
@@ -387,10 +387,10 @@
                 </div>
                 <div class="materi1">
                   <ol class="materi1">
-                    <li>Fungsi \(e^x\) dapat diturunkan pada \((-\infty,+\infty\), dan turunannya adalah</li>
+                    <li>Fungsi \(e^x\) dapat diturunkan pada \(-\infty,+\infty\), dan turunannya adalah</li>
                     <br><p style="display: flex; justify-content: center;">\(\frac{d}{dx}[e^x]=e^x\)</p>
-                    <li>Fungsi \(a^x\) dapat diturunkan pada \(-\infty, +\infty) dan turunannya adalah</li>
-                    <br><p style="display: flex; justify-content: center;">\(\frac{d}{dx}[a^x]=a{}^xlna\)</p>
+                    <li>Fungsi \(a^x\) dapat diturunkan pada \( -\infty, +\infty \) dan turunannya adalah</li>
+                    <br><p style="display: flex; justify-content: center;">\(\frac{d}{dx}[a^x]=a{}^x \ln a\)</p>
                   </ol>          </div> </div>
                   Jika \(u\) fungsi \(x\) yang terdefinisi, maka
                   <p style="display: flex; justify-content: center;">\(\frac{d}{dx}[e^u]=e^u\frac{du}{dx} \) &nbsp; dan &nbsp; \( \frac{d}{dx}[a^u]=a{}^u \ln a\frac{du}{dx}\)</p>
@@ -403,9 +403,9 @@
             </div>
             <div class="materi1">
               <ol>
-                <li>\(lim_{x \to 0} (1+x)^{\frac{1}{x}} = e \)</li>
-                <li>\(lim_{x \to +\infty} (1+\frac{1}{x})^x = e \)</li>
-                <li>\(lim_{x \to -\infty} (1+\frac{1}{x})^x = e \)</li>
+                <li>\(\lim_{x \to 0} (1+x)^{\frac{1}{x}} = e \)</li>
+                <li>\(\lim_{x \to +\infty} (1+\frac{1}{x})^x = e \)</li>
+                <li>\(\lim_{x \to -\infty} (1+\frac{1}{x})^x = e \)</li>
               </ol>
                 </div>
           </div>
@@ -565,7 +565,7 @@ Dapatkan \(\frac{dy}{dx}\) dari fungsi \(y=\ln (\frac{\cos^2 x}{&radic;(2x-3x^2)
   <div class="solution-step">
     <p style="display: flex; justify-content: center;">\(\frac{dy}{dx}=\frac{d}{dx}[ln(\frac {\cos^2x}{&radic;(2x-3x^2)})]\)</p>
     <p style="display: flex; justify-content: center;">\(=\frac{a}{\cos^2x}\frac{d}{dx}[\frac{\cos^2x}{&radic;(2x-3x^2)}]\)</p>
-    <p style="display: flex; justify-content: center;">\(=\frac{&radic;(2x-3x^2)}{cos^2x}\frac{-2\cos x \sin x &radic;(2x-3x^2)-\frac{2-6x}{2&radic;(2x-3x^2)}\cos^2x}{&radic;(2x-3x^2)}\)</p>
+    <p style="display: flex; justify-content: center;">\(=\frac{&radic;(2x-3x^2)}{\cos^2x}\frac{-2\cos x \sin x &radic;(2x-3x^2)-\frac{2-6x}{2&radic;(2x-3x^2)}\cos^2x}{&radic;(2x-3x^2)}\)</p>
     <p style="display: flex; justify-content: center;">\(=\frac{-2 \sin x(2x-3x^2)-(1-3x) \cos x}{(2x-3x^2) \cos x}\)</p>
     <p style="display: flex; justify-content: center;">\(=\frac{-2 \tan(2x-3x^2)-1+3x}{(2x-3x^2)}\)</p>
   </div>
