--- a/Kalkulus 2/Bab 1/2F Invers n Trigono.html
+++ b/Kalkulus 2/Bab 1/2F Invers n Trigono.html
@@ -217,9 +217,10 @@
   table{
     width: 100%;
     border-collapse: collapse;
+    table-layout: auto
   }
 </style>
-<table border="1" cellpadding="10" cellspacing="0" class="tabeltrig">
+<table border="1" cellpadding="10" cellspacing="0" class="tabeltrig" style="max-width: 600px;">
   <thead>
     <tr style="background-color: rgb(209, 209, 209);">
       <th>Fungsi</th>
@@ -273,7 +274,7 @@
 <p style="text-align: center;"><b>Tabel 1.5.1</b> Interpretasi Geometri dari Fungsi Invers Trigonometri</p>
 <br>
 <p style="font-size: 118%;"><b>1.6 Invers Cotangen dan Cosecan</b> </p>
-<table border="1" cellpadding="10" cellspacing="0" class="tabeltrig"> 
+<table border="1" cellpadding="10" cellspacing="0" class="tabeltrig" style="max-width: 400px;"> 
   <thead>
     <tr style="background-color: rgb(209, 209, 209);">
       <th>Fungsi</th>
